Shopera changelog

= Version 1.3.5 =
* Fixed breadcrumb width

= Version 1.3.4 =
* Added dummy content

= Version 1.3.3 =
* Added welcome screen

= Version 1.3.2 =
* Fixed content issue
* Fixed WordPress 4.4 compatibility issue

= Version 1.3.1 =
* Fixed some header responsiveness issues

= Version 1.3 =
* Fixed shortcode issues on single post pages
* Fixed calendar/custom menu widget styling issue at footer
* Fixed mobile menu styling issues
* Fixed large logo styling issues

= Version 1.2.9 =
* Fixed single product image issue

= Version 1.2.8 =
* Added featured content external URL feature;
* Fixed page twitching while scrolling

= Version 1.2.7 =
* Fixed Flickr widget
* Fixed woo_featured_categories title style
* Fixed other styling issues

= Version 1.2.6 =
* Added Go Premium button at customizer
* WooCommerce shop breadcrumb image are now customizable
* Some Safari browser compatibility fixes

= Version 1.2.5 =
* Added missing language strings
* Changed add_submenu_page() to add_theme_page()
* Fixed some styling issues
* Fixed cart button

= Version 1.2.4 =
* Fixed comment form style;
* Updated WooCommerce template

= Version 1.2.3 =
* Fixed the Shopera functionality plugin installation issue

= Version 1.2.2 =
* Added documentation button at customizer
* Updated images copyright information
* Added missing TGM plugin files
* Removed tb-testimonials.zip, now using Easy Testimonials for testimonials

= Version 1.0.13 =
* Removed commented code from functions.js
* Added logo font size through wp_head hook

= Version 1.0.12 =
* Fixed social links at customizer
* Fixed text domain at WooCommerce templates
* Remove license information for Option Tree
* Added recommended logo size at customizer
* Default layout for posts now is taken from customizer
* Properly sanitized customizer checkboxes
* Sanitized shopera_font_size with absint
* Updated translation files

= Version 1.0.11 =
* Used esc_atrr to echo ICL_LANGUAGE_CODE
* Fixed post type design issues